@@ -146,8 +146,9 @@
 
 ### Users and Groups
 
- * The `Carbon.Identity.FindByName` method and [Resolve-Identity](http://get-carbon.org/help/Resolve-Identity.html) and [Test-Identity](http://get-carbon.org/help/Test-Identity.html)) functions now handle identity names with `.` for the domain/machine name, e.g. `.\Administrator`.
-
+ * The `Carbon.Identity.FindByName` method and [Resolve-IdentityName](http://get-carbon.org/help/Resolve-IdentityName.html) and [Test-Identity](http://get-carbon.org/help/Test-Identity.html)) functions now handle identity names with `.` for the domain/machine name, e.g. `.\Administrator`.
+ * The `Carbon.Identity.FullName` property returns the wrong value when domain is empty/null, e.g. `Resolve-IdentityName -Name 'Everyone'` returns `\Everyone`, when it should return `Everyone`.
+ 
 
 # 1.7.0 (30 April 2014)
 
